// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders with correct props 1`] = `
<styled.div
  as="button"
  size="regular"
  theme={
    Object {
      "bg": "#15cf89",
      "fg": "white",
      "hover": "rgb(25, 194, 129)",
    }
  }
  type="submit"
>
  Click me
</styled.div>
`;

exports[`Button renders with correct props 2`] = `
<styled.div
  as="button"
  rounded={true}
  size="regular"
  theme={
    Object {
      "bg": "#15cf89",
      "fg": "white",
      "hover": "rgb(25, 194, 129)",
    }
  }
  type="submit"
>
  Click me
</styled.div>
`;

exports[`Button renders with correct props 3`] = `
<styled.div
  as="button"
  rounded={true}
  size="regular"
  theme={
    Object {
      "bg": "white",
      "fg": "#15cf89",
      "hover": "#15cf8911",
    }
  }
  type="submit"
>
  Click me
</styled.div>
`;

exports[`Button renders with correct props 4`] = `
<styled.div
  as="button"
  rounded={true}
  size="small"
  theme={
    Object {
      "bg": "white",
      "fg": "#15cf89",
      "hover": "#15cf8911",
    }
  }
  type="submit"
>
  Click me
</styled.div>
`;

exports[`Button renders with correct props 5`] = `
<styled.div
  as="button"
  rounded={true}
  size="large"
  theme={
    Object {
      "bg": "white",
      "fg": "#15cf89",
      "hover": "#15cf8911",
    }
  }
  type="submit"
>
  Click me
</styled.div>
`;

exports[`Button renders with correct props 6`] = `
<styled.div
  as="button"
  disabled={true}
  rounded={true}
  size="large"
  theme={
    Object {
      "bg": "white",
      "fg": "#15cf89",
      "hover": "#15cf8911",
    }
  }
  type="submit"
>
  Click me
</styled.div>
`;
